--- a/KeepITCurrent/style.css
+++ b/KeepITCurrent/style.css
@@ -145,7 +145,23 @@ form{
  }   
 }
 
- 
+.date-time {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: black;
+    font-family: 'Poppins', sans-serif;
+    padding: 10px;
+}
+  
+#time {
+    font-size: 24px; /* Adjust the font size as needed */
+}
+  
+#date {
+    font-size: 16px; /* Adjust the font size as needed */
+}
+  
 .trending {
     padding: 20px;
 }
