--- a/KeepITCurrent/style.css
+++ b/KeepITCurrent/style.css
@@ -202,6 +202,14 @@ form{
     color: darkred;
 }
 
+.separator-line {
+    width: 97%;
+    height: 2px;
+    background-color: black;
+    margin: 20px auto; 
+    border: none; 
+}
+  
 main{
     display: flex;
     flex-direction: column;
